--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
         format_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 100 # 배치 사이즈 설정 > Lazy, Eager 설정과 연관
+  thymeleaf:
+    cache: false
 logging:
   level:
     com.ll.chatAi: DEBUG
