--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// 웹소켓, STOMP
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	// validation > requestBody 앞에 @Valid 어노테이션 넣기 위해 필요
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 dependencyManagement {
