--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// security > 인증, 인가를 위함
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// JWT (Json Web Token)
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 dependencyManagement {
